--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +26,14 @@
         android:onClick="play"
         android:layout_centerHorizontal="true"/>
 
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="270dp"
+        android:layout_height="537dp"
+        app:srcCompat="@drawable/logo"
+        android:layout_marginLeft="60dp"
+        tools:ignore="ContentDescription"
+        android:layout_marginStart="60dp" />
 
 
 </RelativeLayout>
